--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.8.3",
   "private": true,
   "dependencies": {
+    "hexo": "^2.8.3",
     "hexo-generator-feed": "^0.2.1",
     "hexo-renderer-ejs": "*",
     "hexo-renderer-marked": "*",
