--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ language: en-US
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://blog.kevinhu.me
+url: https://blog.kevinhu.me
 root: /
 permalink: :year/:month/:day/:title/
 tag_dir: tags
@@ -30,8 +30,7 @@ feed:
 # Directory
 source_dir: source
 public_dir: public
-tag_dir: tags
-
+skip_render:
 
 # Writing
 new_post_name: :year-:month-:title.md # File name of new posts
@@ -46,6 +45,7 @@ future: true
 highlight:
   enable: true
   line_number: true
+  auto_detect: false
   tab_replace:
 
 # Category & Tag
@@ -74,8 +74,8 @@ logger_format: dev
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
-date_format: MMM D YYYY
-time_format: H:mm:ss
+date_format: MM DD YYYY
+time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
@@ -83,11 +83,11 @@ per_page: 10
 pagination_dir: page
 
 # Disqus
-disqus_shortname: kevinhustechblog
+# disqus_shortname: kevinhustechblog
 
 # Extensions
-plugins:
-- hexo-renderer-mathjax
+# plugins:
+# - hexo-renderer-mathjax
 ## Plugins: https://github.com/hexojs/hexo/wiki/Plugins
 ## Themes: https://github.com/hexojs/hexo/wiki/Themes
 theme: landscape
