--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -20,7 +20,7 @@ widgets:
   - follow
 
 # Miscellaneous
-google_analytics: UA-57072621-1
+google_analytics: G-8ENJJHKTMX
 favicon: /favicon.png
 twitter: "Oldgunix"
 google_plus:
