--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,6 @@ titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -49,13 +48,13 @@ highlight:
   tab_replace:
 
 # Marked
-markdown_it_plus:
+post_asset_folder: true
+marked:
   breaks: false
-  html: true
-  xhtmlOut: true
-  linkify: true
-  typographer: true
-  quotes: "“”‘’"
+  gfm: false
+  prependRoot: true
+  postAsset: true
+  headerIds: true
 
 toc:
   maxdepth: 3
@@ -101,13 +100,13 @@ per_page: 10
 pagination_dir: page
 
 # Disqus
-disqus_shortname: kevinhustechblog
+# disqus_shortname: kevinhustechblog
 
 # Extensions
-# plugins:
-# - hexo-renderer-mathjax
-## Plugins: https://github.com/hexojs/hexo/wiki/Plugins
-## Themes: https://github.com/hexojs/hexo/wiki/Themes
+plugins:
+- hexo-renderer-mathjax
+# Plugins: https://github.com/hexojs/hexo/wiki/Plugins
+# Themes: https://github.com/hexojs/hexo/wiki/Themes
 theme: landscape
 exclude_generator:
 
