update lib version and config

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ highlight:
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace:
+  tab_replace: true
 
 # Marked
 post_asset_folder: true
