--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,6 @@ highlight:
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace: true
 
 # Marked
 post_asset_folder: true
@@ -55,6 +54,8 @@ marked:
   prependRoot: true
   postAsset: true
   headerIds: true
+  autolink: true
+  external_link: enable
 
 toc:
   maxdepth: 3
@@ -82,6 +83,8 @@ tag: 2
 ## Hexo uses Connect as a server
 ## You can customize the logger format as defined in
 ## http://www.senchalabs.org/connect/logger.html
+server:
+  cache: false
 port: 4000
 server_ip: localhost
 logger: false
